--- a/posts/2026-03-01.md
+++ b/posts/2026-03-01.md
@@ -1,18 +1,61 @@
 ---
-title: "[바이브 코딩 #10] AI 주식 시그널 아카이브: 1단계 마무리 - Next.js 마이그레이션 준비"
+title: "[바이브 코딩 #10] AI 주식 시그널 아카이브: 1단계 마무리와 Next.js로의 새로운 도약"
 date: "2026-03-01"
-tags: "티스토리API, 자동화, 파이썬스크립트, 웹서비스화, 개발일기, 프로젝트마무리"
+tags: "티스토리API, 자동화, 파이썬스크립트, 웹서비스화, 개발일기, 프로젝트마무리, Streamlit, Next.js"
 ---
 
 "코딩은 기세다."
 
-**토스 증권 시그널 클론 코딩** 프로젝트가 10일 차 기록 입니다.
+**토스 증권 시그널 클론 코딩** 프로젝트가 드디어 10일 차라는 중대한 이정표에 도달했습니다. 초기에는 단순히 주식 정보를 모아보자는 가벼운 마음으로 시작했지만, 이제는 Gemini AI가 뉴스를 요약하고 GitHub Actions가 24시간 데이터를 수집하는 제법 탄탄한 시스템이 되었습니다. 오늘 기록은 3월 1일부터 3월 2일까지의 치열했던 구조 개편과 새로운 플랫폼으로의 마이그레이션 준비 과정을 담고 있습니다.
 
-### 배포 오류 해결 및 구조 최적화 (3/1~3/2)
-- **문제 발생**: 서비스 구조를 정리하며 `app.py`를 `signal/streamlit/` 하위로 이동했으나, Streamlit Cloud가 이를 인식하지 못해 배포 오류 발생.
-- **1차 시도**: `streamlit.toml` 설정을 통해 메인 파일 경로를 지정했으나, 설정이 즉시 반영되지 않거나 캐시 문제로 여전히 실패.
-- **최종 해결**: `app.py`를 다시 레포지토리 루트로 이동하고, 내부의 `sys.path` 임포트 로직을 수정하여 환경에 상관없이 작동하도록 조치. 불필요해진 `streamlit.toml` 삭제.
-- **결과**: Streamlit Cloud 기본 설정(루트에서 `app.py` 실행)에 맞춰 성공적으로 배포 및 서비스 정상화.
+## 10일간의 여정: 파이썬 기반 아카이브의 완성
 
+지난 10일간 우리 시스템은 많은 진화를 거듭했습니다. 국내외 주식 시장의 주요 시그널을 감지하고, 관련 뉴스를 매칭하며, AI를 통해 복잡한 시장 상황을 한 줄로 요약하는 기능을 완성했습니다. 특히 서버 없이도 클라우드 인프라를 효율적으로 활용하는 '서버리스 데이터 파이프라인'을 구축했다는 점에서 큰 성취감을 느낍니다.
 
-*태그: 티스토리API, 자동화, 파이썬스크립트, 웹서비스화, 개발일기, 프로젝트마무리*
+하지만 프로젝트가 커질수록 현재 사용 중인 Streamlit 플랫폼의 한계도 명확해졌습니다. Streamlit은 데이터 대시보드를 빠르게 만드는 데는 최고였지만, 우리가 목표로 하는 **SEO(검색 엔진 최적화)**와 **구글 애드센스/에조익(Ezoic) 광고 수익화**를 구현하기에는 제약이 많았습니다. 또한 대량의 데이터를 브라우저에서 렌더링할 때의 성능 이슈와 모바일 최적화 문제도 고민거리였습니다.
+
+## 중대한 결정: Next.js + Vercel 마이그레이션
+
+따라서 우리는 더 큰 성장을 위해 프런트엔드 스택을 **Next.js**로 완전히 전환하기로 했습니다. Next.js의 서버 사이드 렌더링(SSR)과 정적 재생성(ISR) 기능을 활용하면 페이지 로드 속도를 극대화하고, 주식 관련 키워드가 검색 엔진에 더 잘 노출되도록 할 수 있습니다. 이는 단순한 데이터 대시보드를 넘어 지속 가능한 '플랫폼 서비스'로 나아가는 필수적인 단계입니다.
+
+## 3/1~3/2: 구조 정리와 뜻밖의 배포 오류 (Troubleshooting)
+
+마이그레이션을 준비하며 프로젝트의 디렉터리 구조를 체계적으로 정리하기로 했습니다. 기존에 루트에 어지럽게 흩어져 있던 파일들을 `signal/streamlit/` 폴더로 모으는 작업을 진행했습니다. 그런데 여기서 예상치 못한 복병을 만났습니다.
+
+### 문제 발생: "The main module file does not exist"
+구조를 옮기고 나니 Streamlit Cloud에서 배포 오류가 발생했습니다. Streamlit Cloud는 기본적으로 저장소 루트에 있는 `app.py`를 실행 파일로 기대하는데, 우리가 이를 하위 폴더로 옮기면서 경로를 찾지 못하게 된 것입니다.
+
+### 1차 시도: `streamlit.toml`의 도입
+배포 설정을 UI가 아닌 코드로 제어하기 위해 레포지토리 루트에 `streamlit.toml` 파일을 추가했습니다.
+```toml
+[global]
+file = "signal/streamlit/app.py"
+```
+이 설정을 통해 해결될 것으로 기대했으나, Streamlit Cloud의 캐시 정책이나 UI 설정 우선순위 문제로 인해 여전히 이전 경로를 찾는 문제가 지속되었습니다. "디렉토리 정리는 좋지만, 돌아가야 서비스다"라는 교훈을 다시금 깨닫는 순간이었습니다.
+
+### 최종 해결: '기본에 충실한' 구조 복구와 임포트 최적화
+결국 복잡한 설정보다는 가장 확실한 방법을 선택했습니다. `app.py`를 다시 레포지토리 루트로 이동시켰습니다. 다만, 이번에는 단순히 옮기는 것에 그치지 않고 내부의 임포트 경로를 수정했습니다.
+
+```python
+# app.py 상단에 추가된 유연한 경로 로직
+import os, sys
+sys.path.append(os.path.dirname(__file__))
+from backend import crawler
+```
+
+기존에는 부모 디렉터리(`..`)를 참조하던 상대 경로를 현재 파일 위치 기반의 절대 경로로 수정하여, 로컬 개발 환경과 Streamlit Cloud 배포 환경 모두에서 `backend` 모듈을 안정적으로 불러올 수 있게 조치했습니다. 불필요해진 `streamlit.toml`은 과감히 삭제하고 빈 커밋(`Trigger redeploy`)을 통해 배포를 성공적으로 마무리했습니다.
+
+## 마무리하며: Next.js 시대의 개막
+
+3월의 시작은 배포 오류와의 싸움이었지만, 결과적으로는 프로젝트 구조를 더 견고하게 다지는 계기가 되었습니다. 이제 기반 인프라는 안정되었으니, 본격적으로 Next.js로의 껍데기 교체 작업을 시작할 예정입니다. 
+
+파이썬 기반의 강력한 데이터 엔진은 그대로 가져가되, 프런트엔드는 더욱 세련되고 쫀득한 리액트 생태계로 갈아입힐 것입니다. "코딩은 기세"라는 말처럼, 이 기세 그대로 더 미려하고 강력한 **AI 주식 시그널 플랫폼**을 만들어 가겠습니다. 다음 연재에서는 Next.js와 Tailwind CSS가 빚어내는 환상적인 UI/UX를 기대해 주세요!
+
+---
+
+## 3/1~3/2 개발 요약
+- **목표**: Next.js 마이그레이션 계획 수립 및 디렉터리 구조 최적화
+- **해결**: Streamlit Cloud 배포 경로 이슈를 루트 파일 복구 및 `sys.path` 수정으로 해결
+- **성과**: 서비스 정상화 및 Next.js 마이그레이션 기반 마련
+
+*태그: 티스토리API, 자동화, 파이썬스크립트, 웹서비스화, 개발일기, 프로젝트마무리, Streamlit, Next.js, 트러블슈팅*
