--- a/posts/2026-03-01.md
+++ b/posts/2026-03-01.md
@@ -1,61 +1,55 @@
 ---
-title: "[바이브 코딩 #10] AI 주식 시그널 아카이브: 1단계 마무리와 Next.js로의 새로운 도약"
+title: "[바이브 코딩 #10] AI 주식 시그널 아카이브: 10일간의 여정과 뜻밖의 트러블슈팅"
 date: "2026-03-01"
-tags: "티스토리API, 자동화, 파이썬스크립트, 웹서비스화, 개발일기, 성장기록, Streamlit, Next.js"
+tags: "티스토리API, 자동화, 파이썬스크립트, 웹서비스화, 개발일기, 성장기록, Streamlit, 트러블슈팅"
 ---
 
 "코딩은 기세다."
 
-**토스 증권 시그널 클론 코딩** 프로젝트가 드디어 10일 차라는 중대한 이정표에 도달했습니다. 초기에는 단순히 주식 정보를 모아보자는 가벼운 마음으로 시작했지만, 이제는 Gemini AI가 뉴스를 요약하고 GitHub Actions가 24시간 데이터를 수집하는 제법 탄탄한 시스템이 되었습니다. 오늘 기록은 치열했던 구조 개편과 새로운 플랫폼으로의 마이그레이션 준비 과정을 담고 있습니다.
+**토스 증권 시그널 클론 코딩** 프로젝트가 드디어 10일 차라는 중대한 이정표에 도달했습니다. 초기에는 단순히 주식 정보를 모아보자는 가벼운 마음으로 시작했지만, 이제는 Gemini AI가 뉴스를 요약하고 GitHub Actions가 24시간 데이터를 수집하며 Streamlit이 이를 시각화하는 제법 탄탄한 시스템이 되었습니다. 오늘 기록은 10일간의 여정을 돌아보고, 구조 개편 과정에서 겪은 치열한 트러블슈팅 과정을 담고 있습니다.
 
 ## 10일간의 여정: 파이썬 기반 아카이브의 완성
 
-지난 10일간 우리 시스템은 많은 진화를 거듭했습니다. 국내외 주식 시장의 주요 시그널을 감지하고, 관련 뉴스를 매칭하며, AI를 통해 복잡한 시장 상황을 한 줄로 요약하는 기능을 완성했습니다. 특히 서버 없이도 클라우드 인프라를 효율적으로 활용하는 '서버리스 데이터 파이프라인'을 구축했다는 점에서 큰 성취감을 느낍니다.
+지난 10일간 우리 시스템은 기대 이상의 진화를 거듭했습니다. 국내외 주식 시장의 주요 시그널을 감지하고, 관련 뉴스를 매칭하며, AI를 통해 복잡한 시장 상황을 한 줄로 요약하는 기능을 완성했습니다. 특히 별도의 서버 없이도 GitHub Actions와 Streamlit Cloud라는 클라우드 인프라를 효율적으로 결합하여 '서버리스 데이터 파이프라인'을 성공적으로 구축했다는 점에서 큰 성취감을 느낍니다.
 
-하지만 프로젝트가 커질수록 현재 사용 중인 Streamlit 플랫폼의 한계도 명확해졌습니다. Streamlit은 데이터 대시보드를 빠르게 만드는 데는 최고였지만, 우리가 목표로 하는 **SEO(검색 엔진 최적화)**와 **구글 애드센스/에조익(Ezoic) 광고 수익화**를 구현하기에는 제약이 많았습니다. 또한 대량의 데이터를 브라우저에서 렌더링할 때의 성능 이슈와 모바일 최적화 문제도 고민거리였습니다.
-
-## 중대한 결정: Next.js + Vercel 마이그레이션
-
-따라서 우리는 더 큰 성장을 위해 프런트엔드 스택을 **Next.js**로 완전히 전환하기로 했습니다. Next.js의 서버 사이드 렌더링(SSR)과 정적 재생성(ISR) 기능을 활용하면 페이지 로드 속도를 극대화하고, 주식 관련 키워드가 검색 엔진에 더 잘 노출되도록 할 수 있습니다. 이는 단순한 데이터 대시보드를 넘어 지속 가능한 '플랫폼 서비스'로 나아가는 필수적인 단계입니다.
+실시간으로 쏟아지는 방대한 뉴스 데이터 속에서 의미 있는 '시그널'을 찾아내고, 이를 테마별로 정리하여 투자자들에게 제공하는 프로세스는 이제 시스템적으로 안착되었습니다. 데이터 품질을 유지하기 위한 전수 검사 스크립트와 메타데이터 관리 체계까지 갖춤으로써, 단순한 수집기를 넘어 신뢰할 수 있는 데이터 아카이브의 면모를 갖추게 되었습니다.
 
 ## 구조 정리와 뜻밖의 배포 오류 (Troubleshooting)
 
-마이그레이션을 준비하며 프로젝트의 디렉터리 구조를 체계적으로 정리하기로 했습니다. 기존에 루트에 어지럽게 흩어져 있던 파일들을 `signal/streamlit/` 폴더로 모으는 작업을 진행했습니다. 그런데 여기서 예상치 못한 복병을 만났습니다.
+프로젝트가 커짐에 따라 코드의 유지보수성을 높이기 위해 디렉터리 구조를 체계적으로 정리하기로 했습니다. 기존에 루트에 어지럽게 흩어져 있던 파일들을 기능별 폴더로 분류하고, Streamlit 관련 파일들을 `signal/streamlit/` 폴더로 모으는 작업을 진행했습니다. 그런데 여기서 예상치 못한 복병을 만났습니다.
 
 ### 문제 발생: "The main module file does not exist"
-구조를 옮기고 나니 Streamlit Cloud에서 배포 오류가 발생했습니다. Streamlit Cloud는 기본적으로 저장소 루트에 있는 `app.py`를 실행 파일로 기대하는데, 우리가 이를 하위 폴더로 옮기면서 경로를 찾지 못하게 된 것입니다.
+구조를 정리하고 나니 멀쩡히 돌아가던 Streamlit Cloud에서 배포 오류가 발생했습니다. Streamlit Cloud는 기본적으로 저장소 루트에 있는 `app.py`를 실행 파일로 기대하는데, 우리가 이를 하위 폴더로 옮기면서 경로를 찾지 못하게 된 것입니다. 로그에는 빨간 글씨로 메인 모듈을 찾을 수 없다는 메시지만 가득했습니다.
 
-### 1차 시도: `streamlit.toml`의 도입
-배포 설정을 UI가 아닌 코드로 제어하기 위해 레포지토리 루트에 `streamlit.toml` 파일을 추가했습니다.
+### 1차 시도: `streamlit.toml`을 통한 경로 지정
+배포 설정을 코드로 제어하기 위해 레포지토리 루트에 `streamlit.toml` 파일을 추가했습니다.
 ```toml
 [global]
 file = "signal/streamlit/app.py"
 ```
-이 설정을 통해 해결될 것으로 기대했으나, Streamlit Cloud의 캐시 정책이나 UI 설정 우선순위 문제로 인해 여전히 이전 경로를 찾는 문제가 지속되었습니다. "디렉토리 정리는 좋지만, 돌아가야 서비스다"라는 교훈을 다시금 깨닫는 순간이었습니다.
+이 설정을 통해 해결될 것으로 기대했으나, Streamlit Cloud의 캐시 정책이나 UI의 환경 설정 우선순위 문제로 인해 여전히 이전 경로를 고집하며 실패가 반복되었습니다. "구조는 예뻐졌지만, 서비스는 멈췄다"라는 뼈아픈 교훈을 얻은 순간이었습니다.
 
-### 최종 해결: '기본에 충실한' 구조 복구와 임포트 최적화
-결국 복잡한 설정보다는 가장 확실한 방법을 선택했습니다. `app.py`를 다시 레포지토리 루트로 이동시켰습니다. 다만, 이번에는 단순히 옮기는 것에 그치지 않고 내부의 임포트 경로를 수정했습니다.
+### 최종 해결: 기본 구조 복구와 지능적 임포트 수정
+결국 복잡한 설정보다는 가장 확실하고 견고한 방법을 선택했습니다. `app.py`를 다시 레포지토리 루트로 이동시켰습니다. 다만, 이번에는 단순히 위치만 옮기는 것이 아니라, 내부에서 `backend` 모듈을 불러올 때 경로 이슈가 발생하지 않도록 로직을 보강했습니다.
 
 ```python
-# app.py 상단에 추가된 유연한 경로 로직
+# app.py 상단의 유연한 경로 로직
 import os, sys
 sys.path.append(os.path.dirname(__file__))
 from backend import crawler
 ```
 
-기존에는 부모 디렉터리(`..`)를 참조하던 상대 경로를 현재 파일 위치 기반의 절대 경로로 수정하여, 로컬 개발 환경과 Streamlit Cloud 배포 환경 모두에서 `backend` 모듈을 안정적으로 불러올 수 있게 조치했습니다. 불필요해진 `streamlit.toml`은 과감히 삭제하고 빈 커밋(`Trigger redeploy`)을 통해 배포를 성공적으로 마무리했습니다.
+기존에는 부모 디렉터리(`..`)를 참조하던 상대 경로 방식을 현재 파일 위치를 기반으로 한 유연한 경로 추가 방식으로 수정했습니다. 이를 통해 로컬 개발 환경과 Streamlit Cloud의 어떠한 배포 환경에서도 모듈 간 참조 오류 없이 안정적으로 작동하게 되었습니다. 불필요해진 `streamlit.toml`은 삭제하고, 강제 재배포를 위한 빈 커밋을 통해 마침내 서비스 정상화를 확인했습니다.
 
-## 새로운 시작: Next.js 시대의 개막
+## 기록을 마치며
 
-3월의 시작은 배포 오류와의 싸움이었지만, 결과적으로는 프로젝트 구조를 더 견고하게 다지는 계기가 되었습니다. 이제 기반 인프라는 안정되었으니, 본격적으로 Next.js로의 껍데기 교체 작업을 시작할 예정입니다. 
-
-파이썬 기반의 강력한 데이터 엔진은 그대로 가져가되, 프런트엔드는 더욱 세련되고 쫀득한 리액트 생태계로 갈아입힐 것입니다. "코딩은 기세"라는 말처럼, 이 기세 그대로 더 미려하고 강력한 **AI 주식 시그널 플랫폼**을 만들어 가겠습니다. 다음 연재에서는 Next.js와 Tailwind CSS가 빚어내는 환상적인 UI/UX를 기대해 주세요!
+3월의 시작과 함께 찾아온 배포 오류는 자칫 당황스러울 수 있었지만, 오히려 프로젝트의 구조적 안정성을 한층 높이는 계기가 되었습니다. 10일이라는 짧은 시간 동안 밑바닥부터 쌓아 올린 이 시스템은 이제 다음 단계로 나아갈 준비가 되었습니다. 시스템은 안정되었고, 데이터는 매일 쌓이고 있으며, 우리의 기세는 여전히 뜨겁습니다.
 
 ---
 
 ## 오늘의 개발 요약
 
-목표: Next.js 마이그레이션 계획 수립 및 디렉터리 구조 최적화
-도구: Next.js, Tailwind CSS, Vercel Migration Plan
-
-*태그: 티스토리API, 자동화, 파이썬스크립트, 웹서비스화, 개발일기, 성장기록, Streamlit, Next.js, 트러블슈팅*
+목표: 10일 차 성과 정리 및 디렉터리 구조 최적화 과정에서의 트러블슈팅 완료
+도구: Python, Streamlit Cloud, Git
+ 
+*태그: 티스토리API, 자동화, 파이썬스크립트, 웹서비스화, 개발일기, 성장기록, Streamlit, 트러블슈팅*
